--- a/src/app/pages/calculation-loan-page/components/insurances-params/insurances-params.component.html
+++ b/src/app/pages/calculation-loan-page/components/insurances-params/insurances-params.component.html
@@ -1,5 +1,5 @@
-<div class="insurance-params-container">
-  <div class="insurance-params-title">Параметры страховых продуктов</div>
+<tes-card-layout [title]="insuranceParamsTitle">
+  <div class="insurance-params-title"></div>
   <form class="insurance-params-form" [formGroup]="formInsuranceOptions">
     <div class="insurance-terms-toggle">
       <label class="toggle-switch">
@@ -135,4 +135,4 @@
       Рассчитать
     </button> -->
   </form>
-</div>
+</tes-card-layout>
