--- a/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-page.component.html
+++ b/src/app/pages/calculation-loan-page/components/product-calculation/product-calculation-page.component.html
@@ -1,7 +1,7 @@
-<div class="tes-wrapper">
+<tes-card-layout [title]="productCalculationTitle">
   <div class="container">
     <div class="row">
-      <div class="col-12 tes-wrapper-title">Расчет страховых полисов</div>
+      <div class="col-12 tes-wrapper-title"></div>
       <div class="col-12">
         <div class="tes-wrapper-content">
           <tes-product-calculation-table
@@ -21,4 +21,4 @@
       </div>
     </div>
   </div>
-</div>
+</tes-card-layout>
