--- a/src/app/pages/main-form-content/componets/side-bar/side-bar.component.scss
+++ b/src/app/pages/main-form-content/componets/side-bar/side-bar.component.scss
@@ -1,5 +1,5 @@
 .side-bar {
-  max-width: 292px;
+  width: 100%;
   max-height: 395px;
   background: #ffffff;
   box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
