--- a/src/app/pages/main-form-content/main-form-content-page.component.scss
+++ b/src/app/pages/main-form-content/main-form-content-page.component.scss
@@ -27,7 +27,8 @@
   margin: 0 auto;
   width: 90%;
   display: flex;
-  gap: 7px;
+  gap: 10px;
+  justify-content: space-between;
 }
 
 .nav-container {
