--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.html
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.html
@@ -1,5 +1,4 @@
-<div class="owner-container">
-  <div class="owner-title">Кредитные и страховые продукты</div>
+<tes-card-layout [title]="ownerTitle">
   <form class="owner-form" [formGroup]="formOwnerOptions">
     <div class="owner-products-container">
       <div class="owner-products">
@@ -255,4 +254,4 @@
       </div>
     </div>
   </form>
-</div>
+</tes-card-layout>
