--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
@@ -1,29 +1,3 @@
-.owner-container {
-  padding: 30px;
-  width: 75vw;
-  height: 100%;
-  background: #ffffff;
-  box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
-  border-radius: 30px;
-  display: flex;
-  flex-direction: column;
-  overflow: wrap;
-}
-
-.owner-title {
-  margin-top: 35px;
-  margin-left: 30px;
-  margin-bottom: 35px;
-  width: 100%;
-  height: 3vh;
-  color: #343e48;
-  font-family: 'Gilroy';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 30px;
-  line-height: 130%;
-}
-
 .owner-form {
   height: 100%;
   display: flex;
@@ -32,7 +6,6 @@
   padding: 0px 0px 6px;
   gap: 18px;
   color: #343e48;
-  margin-left: 35px;
   flex-wrap: wrap;
 }
 
@@ -119,7 +92,7 @@
 
 .owner-personal-information-container {
   min-width: 100%;
-  height: 100vh;
+  max-height: 100%;
 
   .personal-information-title {
     margin-top: 35px;
