--- a/src/app/pages/processing-page/components/client-info/client-info.component.scss
+++ b/src/app/pages/processing-page/components/client-info/client-info.component.scss
@@ -1,171 +1,166 @@
-.questionnaire-container {
-  padding: 20px;
-  min-width: 75vw;
-  min-height: 80vh;
-  background: #ffffff;
-  box-shadow: -1px 3px 20px 1px rgba(33, 44, 55, 0.08);
-  border-radius: 30px;
+.registration {
+  display: flex;
+  flex-direction: column;
 
-  .registration {
+  .dnd__container {
+    display: flex;
+    gap: 10px;
+    margin-top: 16px;
+  }
+
+  .picker__container {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    .dnd__container {
-      display: flex;
-      gap: 10px;
-      margin-top: 16px;
+    .picker__label {
+      margin-top: 7px;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 16px;
+      color: #979797;
     }
+  }
 
-    .picker__container {
+  .family__form-group,
+  .residential-address__form-group,
+  .passport__form-group {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+    column-gap: 50px;
+    .form-group__item {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
 
-      .picker__label {
-        margin-top: 7px;
+      &--label {
         font-weight: 400;
-        font-size: 12px;
-        line-height: 16px;
-        color: #979797;
+        font-size: 16px;
+        line-height: 24px;
+        color: #343e48;
       }
-    }
 
-    .family__form-group,
-    .residential-address__form-group,
-    .passport__form-group {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      column-gap: 50px;
-      .form-group__item {
+      &--select,
+      &--input {
+        margin-top: 10px;
+        width: 100%;
+        background: #f2f4f7;
+        border-radius: 8px;
+        padding: 17.5px 10px;
+      }
+      &--options {
+        margin-top: 24px;
         display: flex;
-        flex-direction: column;
+        align-items: center;
+        flex-direction: row;
 
-        &--label {
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 24px;
-          color: #343e48;
-        }
+        .checkbox {
+          width: 20px;
+          height: 20px;
+          margin-right: 10px;
+          accent-color: #72879e;
 
-        &--select,
-        &--input {
-          margin-top: 10px;
-          width: 100%;
-          background: #f2f4f7;
-          border-radius: 8px;
-          padding: 17.5px 10px;
-        }
-        &--options {
-          margin-top: 24px;
-          display: flex;
-          align-items: center;
-          flex-direction: row;
-
-          .checkbox {
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
-            accent-color: #72879e;
-
-            .form-group__item--label {
-              font-weight: 400;
-              font-size: 16px;
-              line-height: 24px;
-              color: #343e48;
-            }
+          .form-group__item--label {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            color: #343e48;
           }
         }
       }
     }
+  }
 
-    &-title {
+  .monthly_expenses {
+    margin-bottom: 40px;
+  }
+
+  &-title {
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 130%;
+    color: #343e48;
+  }
+
+  .passport-data {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .passport-data,
+  .residential-address,
+  .education,
+  .family,
+  .monthly_expenses {
+    margin-top: 40px;
+    &__title {
+      margin-bottom: 35px;
+      font-style: normal;
       font-weight: 400;
-      font-size: 30px;
+      font-size: 22px;
       line-height: 130%;
       color: #343e48;
     }
 
-    .passport-data {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+    &__auto-registration {
+      padding: 11.5px 13px;
+      background: #ffffff;
+      border: 1px solid #72879e;
+      border-radius: 6px;
 
-    .passport-data,
-    .residential-address,
-    .education,
-    .family,
-    .monthly_expenses {
-      margin-top: 40px;
-      &__title {
-        margin-bottom: 35px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 22px;
-        line-height: 130%;
+      &-text {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+        text-align: center;
         color: #343e48;
       }
 
-      &__auto-registration {
-        padding: 11.5px 13px;
-        background: #ffffff;
-        border: 1px solid #72879e;
-        border-radius: 6px;
-
-        &-text {
-          font-weight: 500;
-          font-size: 14px;
-          line-height: 17px;
-          text-align: center;
-          color: #343e48;
-        }
-
-        &-img {
-          margin-right: 10px;
-        }
+      &-img {
+        margin-right: 10px;
       }
     }
+  }
 
-    .education {
+  .education {
+    display: flex;
+    flex-direction: column;
+
+    &__list {
       display: flex;
-      flex-direction: column;
+      flex-wrap: wrap;
+      gap: 10px;
+      max-width: 70%;
 
-      &__list {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
-        max-width: 70%;
-
-        &--button {
-          padding: 10px 40px;
-          background: #f2f4f7;
-          color: #343e48;
-          border-radius: 20px;
-        }
+      &--button {
+        padding: 10px 40px;
+        background: #f2f4f7;
+        color: #343e48;
+        border-radius: 20px;
       }
     }
   }
+}
 
-  .change-options__button {
-    background: transparent;
-    padding: 10px 75px;
-    border: 1px solid #72879e;
-    border-radius: 6px;
-  }
+.change-options__button {
+  background: transparent;
+  padding: 10px 75px;
+  border: 1px solid #72879e;
+  border-radius: 6px;
+}
 
-  .next-page__button {
-    align-self: flex-end;
-    margin-top: 70px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    background: #343e48;
-    padding: 14px 76px;
-    border-radius: 6px;
-    color: #ffffff;
-  }
+.next-page__button {
+  align-self: flex-end;
+  margin-top: 70px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  background: #343e48;
+  padding: 14px 76px;
+  border-radius: 6px;
+  color: #ffffff;
 }
 
 .active {
