--- a/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.html
+++ b/src/app/pages/calculation-loan-page/components/drivers/drivers-content/drivers-content.component.html
@@ -28,11 +28,11 @@
               <div class="driver-insurance__checkbox-list">
                 <tes-input-checkbox
                   [label]="'ОСАГО'"
-                  formControlName="kasko"
+                  formControlName="osago"
                 ></tes-input-checkbox>
                 <tes-input-checkbox
                   [label]="'КАСКО'"
-                  formControlName="osago"
+                  formControlName="kasko"
                 ></tes-input-checkbox>
                 <tes-input-checkbox
                   [label]="'Кредит'"
@@ -71,16 +71,16 @@
 
               <tes-input-basic
                 [label]="'Водительское удостоверение №'"
-                formControlName="driver_licence_number"
+                formControlName="driver_license_number"
               ></tes-input-basic>
               <tes-input-basic
                 [label]="'Кем выдано'"
-                formControlName="driver_licence_issued_by"
+                formControlName="driver_license_issued_by"
               ></tes-input-basic>
 
               <tes-input-basic
                 [label]="'Дата выдачи'"
-                formControlName="driver_licence_issued_date"
+                formControlName="driver_license_issued_date"
               ></tes-input-basic>
 
               <tes-input-basic
