--- a/src/app/shared/components/card-layout/card-layout.component.scss
+++ b/src/app/shared/components/card-layout/card-layout.component.scss
@@ -1,5 +1,5 @@
 .card-layout {
-  max-width: 100%;
+  width: 70vw;
   min-height: 82vh;
   background-color: #ffffff;
   box-shadow: -1px 3px 20px 1px rgb(33 44 55 / 8%);
